needed to revert, made a few errors, retrying to fix project-writing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ svg {
   .sections-container {
     overflow-x: hidden;
   }
+  .down-arrow {
+    visibility: hidden;
+    }  
 }
 
 .down-arrow-container {
@@ -42,12 +45,6 @@ position: sticky;
 padding: 1rem;
 border-radius: 50%;
 border: solid 2px #fff;
-}
-
-@media screen and (max-width: 900px) {
-.down-arrow {
-visibility: hidden;
-}  
 }
 
 .rotate-up {
@@ -168,6 +165,9 @@ text-transform: uppercase;
 @media screen and (min-width: 481px) and (max-width: 900px) {
   .profile-title h1 {
     display: flex;
+    margin-top: 0;
+    font-size: 3.5rem;
+    font-weight: 750;
     text-transform: uppercase;
     flex-wrap: wrap;
     align-content: center;
@@ -204,20 +204,6 @@ margin: 0;
   left: 0;
 }
 
-@media screen and (min-width: 250px) and (max-width: 480px) {
-.profile-title h1 {
-  display: flex;
-  margin-top: 0;
-  font-size: 2rem;
-  font-weight: 750;
-  text-transform: uppercase;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
-  }
-}
-
 .quote-right {
   padding-left: 1rem;
   position: absolute;
@@ -243,7 +229,6 @@ align-items: center;
 cite {
 opacity: 0.7;
 }
-
 
 .profile-socials {
   display: flex;
@@ -370,7 +355,7 @@ text-transform: uppercase;
 
 .project-title {
 width: 100%;
-font-size: 2.5rem;
+font-size: 2rem;
 text-transform: uppercase;
 display: flex;
 flex-direction: row;
@@ -386,7 +371,7 @@ gap: 1rem;
 }
 
 .git-link-icon {
-width: 2.5rem;
+width: 2rem;
 color: #fff;
 }
 
@@ -401,10 +386,6 @@ opacity: 0.7;
   flex-direction: column;
   gap: 1rem;
   line-height: 1.3rem;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
 }
 
 /* ---- Project Images ---- */
@@ -480,7 +461,7 @@ opacity: 0.7;
     width: auto;
     height: 95%;
 }
-
+@media screen and (min-width: 250px) and (max-width: 900px) {
   .projects {
     position: relative;
     padding-left: 0;
@@ -493,40 +474,48 @@ opacity: 0.7;
     align-content: center;
     justify-content: center;
 }
-    
-.project-writing {
+
+.project-image-container {
+  flex: 1;
+  width: 100%;
+  margin-right: 0;
+}
+.project-image-wrapper {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 0.75rem;
+}
+
+.project-title {
+    width: 100%;
+    font-size: 2rem;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.project-info {
+      width: 100%;
+      font-size: 1rem;
+      display: flex;
+      flex-direction: row;
+  }
+    .project-writing {
     padding-right: 0;
     padding-left: 1.18rem;
     position: static;
-    width: 75%;
+    width: 300px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
-
-  .project-info {
-    width: 100%;
-    font-size: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: flex-start;
-    justify-content: center;
-    align-content: flex-start;
-  }
-
-  .project-image-container {
-    flex: 1;
-    width: 100%;
-    margin-right: 0;
-  }
-  .project-image-wrapper {
-    margin-top: 2rem;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 0.75rem;
-  }
-
+}
 
 /* ---- End Projects ---- */
 
